# live

./: .env-template  .env.example  .eslintrc.cjs  .flaskenv  .gitignore  .prettierrc.json  CHANGELOG.md  MANIFEST.in  README.md  app.py  bootstrap.sh  ci.md  compile_sass.sh  drizzle.config.json  eslint.config.js  fabfile.py  knexfile.cjs  knexfile.ts  netlify.toml  package-lock.json  package.json  pierogis-live.conf  pnpm-lock.yaml  pyproject.toml  readme.md  requirements.txt  sass  setup.cfg  setup.py  svelte.config.js  todo.md  tsconfig.json  turbo.json  upload.sh
.changeset/: config.json  cuddly-peas-tap.md  fast-pianos-speak.md  flat-carrots-deny.md  fresh-carrots-jump.md  odd-forks-pretend.md  purple-seas-add.md  tiny-timers-occur.md  two-dogs-approve.md  upset-chefs-hear.md
.github/workflows/: ci-dev.yml  ci-live.yml  ci.yml  publish.yml  python-publish.yml  version.yml
apps/live/: package.json
apps/utensils/: README.md  package.json
bootstrap/: bootstrap.sh  certbot-dev.sh  certbot.sh  gunicorn.conf.py  install.sh  pierogis-live-nginx.conf  pierogis-live.conf  pierogis-live.service
instance/: .env  .env-template  config.py
migrations/: 0000_long_dagger.sql  0001_sturdy_violations.sql  000_initial.cjs  20220225022405_initial.ts  20220225162255_initial.cjs
pierogis_live/: __init__.py
prisma/: schema.prisma
seeds/: 000_jurisdictions.cjs  categories.ts  index.ts  initial.ts  jurisdictions.ts  users.ts  wares.ts
src/: additional-svelte-jsx.d.ts  app.d.ts  app.html  dev.py  global.d.ts  hooks.server.ts  hooks.ts  seed.ts
tests/: test.ts
(+626 files in other folders)
